0x07-python-test_driven_development/tests/5-text_indentation.txt

dule ``4-print_square``
*************************

Function ``print_square``::
-------------------------

    >>> print_square = __import__('4-print_square').print_square

    Testing normal input

    >>> print_square(0)
    >>> print_square(1)
    #
    >>> print_square(3)
    ###
    ###
    ###

    Testing Exceptions

    >>> print_square("5")
    Traceback (most recent call last):
        ~~~
    TypeError: size must be an integer
    >>> print_square(2.5)
    Traceback (most recent call last):
        ~~~
    TypeError: size must be an integer
    >>> print_square(-3.6)
    Traceback (most recent call last):
        ~~~
    TypeError: size must be an integer
    >>> print_square(-3)
    Traceback (most recent call last):
        ~~~
    ValueError: size must be >= 0
    >>> try:
    ...        print_square()
    ... except TypeError:
    ...        print("Failed")
    ...
    Failed
